--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,19 +4,34 @@
 }
 .filters li {
   display: inline-block;
-  max-width: 80px;
+  text-decoration: none;
+  max-width: 100px;
   padding: 3px;
 }
 .filters li label {
   display: block;
+  width: 80%;
   font-size: 12px;
-  font-weight: 900;
+  font-weight: 700;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  margin: 0 20px 10px 0;
+  padding-right: 20px;
+  color: #2cdfd3;
 }
 .filters li input {
   width: 100%;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  border: none;
+  border-bottom: 1px solid #2cdfd3;
+  margin: 0 20px 10px 0;
 }
 .filters li select {
   width: 100%;
+  border: none;
+  border-bottom: 1px solid #2cdfd3;
+  margin-bottom: 10px;
 }
 .widget {
   position: relative;
@@ -99,4 +114,8 @@
 .widget ul li:last-child > a {
   border: none;
   border-radius: 0 0 3px 0;
+}
+
+.picker:focus {
+  outline: none;
 }
